--- a/test.html
+++ b/test.html
@@ -146,8 +146,8 @@
 </head>
 <body>
     <div>
-        <h1>Free Wifi</h1>
-        <p>To get Free Wifi you have to login with one of this Accounts!</p>
+        <h1>Wifi access</h1>
+        <p>To get Wifi access you have to login with one of the following account Accounts!</p>
     </div>
     <div class="login-container">
         <h2>Sign in</h2>
